# monorepo-poc

./: .gitignore  Makefile  README.md  pyproject.toml  workspace.toml
bases/streamx/api/: core.py
components/streamx/manage_channels/: core.py
components/streamx/schemas/: __init__.py
projects/api/: Dockerfile  pyproject.toml
tests/: test_api.py
